Fix breadcrumb overflow by adding max-width constraint

--- a/app/components/primer/beta/breadcrumbs.pcss
+++ b/app/components/primer/beta/breadcrumbs.pcss
@@ -3,6 +3,7 @@
   /* stylelint-disable-next-line primer/spacing */
   margin-left: -0.35em;
   list-style: none;
+  max-width: 100%;
 
   &::after {
     display: inline-block;
